--- a/state/templates/state/redesign/gov/government.html
+++ b/state/templates/state/redesign/gov/government.html
@@ -9,7 +9,7 @@
 {% load government.redesign.new_bill %}
 {% load government.redesign.bills %}
 {% load government.redesign.bills_history %}
-{% load government.custom_rights %}
+{% load government.redesign.custom_rights %}
 
 {% block for_scripts_and_css %}
 <!--универсальная модалка таблиц-->
@@ -155,22 +155,6 @@ const newNalog = new BlockSelect({
 	blocksClass: '.new-nalog-block',
 });
 newNalog.setEventListeners();
-
-
-const mnisterBlock1 = document.querySelector('.gover__blockMid');
-const mnisterBlock2 = document.querySelector('.gover__blockStatistic');
-const mnisterTabBtn = document.querySelectorAll('.gover__ministerTabs .ct__top-tab')
-function switchMainBlocks(num) {
-	if (num === 0) {
-		mnisterBlock1.classList.add('active')
-		mnisterBlock2.classList.remove('active')
-	} else {
-		mnisterBlock1.classList.remove('active')
-		mnisterBlock2.classList.add('active')
-	}
-	mnisterTabBtn.forEach((btn) => btn.classList.remove('active'));
-	mnisterTabBtn[num].classList.add('active');
-}
 
 // Проверка, что все элементы, которые ищутся по ID, существуют
 const mainElement = document.getElementById('gover__modal');
@@ -397,239 +381,8 @@ if (mainElement && openModalBtnElement && closeModalBtnElement) {
 				{% if is_deputate %}
 					{% new_bill player parliament %}
 					{% if has_custom_right %}
-			<!--министр-->
-			<div class="gover__block gover__minis">
-<!--				<div class="gover__ministerTabs ct__top-tabs">-->
-<!--					<button class="ct__top-tab ct__top-tab1 active ct__mid-btn" onclick="switchMainBlocks(0)">-->
-<!--						<svg width="144" height="30" viewBox="0 0 144 30" xmlns="http://www.w3.org/2000/svg">-->
-<!--							<mask id="mask0_259_317" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="144" height="30">-->
-<!--								<path class="geometry1" d="M0 5.76923L5.76923 0H144V23.0769L137.077 30H0V5.76923Z"/>-->
-<!--							</mask>-->
-<!--							<g mask="url(#mask0_259_317)">-->
-<!--								<path class="geometry2" d="M0 5.76917L5.76923 -6.10352e-05H144V23.0769L137.077 29.9999H0V5.76917Z"/>-->
-<!--								<path class="treg1" opacity="0.15" d="M109.266 13.4468L125.407 3.59524L125.868 22.4997L109.266 13.4468Z" fill="var(&#45;&#45;c10one)"/>-->
-<!--								<path class="treg2" opacity="0.15" d="M95.6185 -3.53072L103.36 25.3596L74.4694 17.6185L95.6185 -3.53072Z" fill="var(&#45;&#45;c10one)"/>-->
-<!--								<path class="treg3" opacity="0.15" d="M22.6079 -8.73057L72.591 7.62749L33.433 42.7351L22.6079 -8.73057Z" fill="var(&#45;&#45;c10one)"/>-->
-<!--							</g>-->
-<!--						</svg>-->
-<!--						<span>МИД</span>-->
-<!--					</button>-->
-
-<!--					<button class="ct__top-tab ct__top-tab2 ct__mid-btn" onclick="switchMainBlocks(1)">-->
-<!--						<svg width="144" height="30" viewBox="0 0 144 30" xmlns="http://www.w3.org/2000/svg">-->
-<!--							<mask id="mask0_259_318" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="144" height="30">-->
-<!--								<path class="geometry1" d="M0 5.76923L5.76923 0H144V23.0769L137.077 30H0V5.76923Z"/>-->
-<!--							</mask>-->
-<!--							<g mask="url(#mask0_259_318)">-->
-<!--								<path class="geometry2" d="M0 5.76917L5.76923 -6.10352e-05H144V23.0769L137.077 29.9999H0V5.76917Z"/>-->
-<!--								<path class="treg1" opacity="0.15" d="M109.266 13.4468L125.407 3.59524L125.868 22.4997L109.266 13.4468Z" fill="var(&#45;&#45;c10one)"/>-->
-<!--								<path class="treg2" opacity="0.15" d="M95.6185 -3.53072L103.36 25.3596L74.4694 17.6185L95.6185 -3.53072Z" fill="var(&#45;&#45;c10one)"/>-->
-<!--								<path class="treg3" opacity="0.15" d="M22.6079 -8.73057L72.591 7.62749L33.433 42.7351L22.6079 -8.73057Z" fill="var(&#45;&#45;c10one)"/>-->
-<!--							</g>-->
-<!--						</svg>-->
-<!--						<span>Статистика</span>-->
-<!--					</button>-->
-<!--				</div>-->
-
-<!--				<div class="gover__decorLine"></div>-->
-
-<!--				&lt;!&ndash;министр - блок МИД&ndash;&gt;-->
-<!--				<div class="gover__blockMid active">-->
-<!--					<button class="gover__blockMid-cancelAll">отклонить всё</button>-->
-
-<!--					<table class="gover__table">-->
-<!--						<tbody>-->
-<!--							<tr>-->
-<!--								<td>-->
-<!--									<div class="gover__withImage">-->
-<!--										<img src="img/kub.png" alt="">-->
-<!--										<span>UserName super duper</span>-->
-<!--									</div>-->
-<!--								</td>-->
-<!--								<td>-->
-<!--									<div class="gover__withImage">-->
-<!--										<img src="img/gerb.png" alt="">-->
-<!--										<span>Саксония-Анхальт</span>-->
-<!--									</div>-->
-<!--								</td>-->
-<!--								<td class="gover__voteMid">-->
-<!--									<div>-->
-<!--										<button>👎</button>-->
-<!--										<button>👍</button>-->
-<!--									</div>-->
-<!--								</td>-->
-<!--							</tr>-->
-
-<!--							<tr>-->
-<!--								<td>-->
-<!--									<div class="gover__withImage">-->
-<!--										<img src="img/kub.png" alt="">-->
-<!--										<span>UserName super duper</span>-->
-<!--									</div>-->
-<!--								</td>-->
-<!--								<td>-->
-<!--									<div class="gover__withImage">-->
-<!--										<img src="img/gerb.png" alt="">-->
-<!--										<span>Саксония-Анхальт</span>-->
-<!--									</div>-->
-<!--								</td>-->
-<!--								<td class="gover__voteMid">-->
-<!--									<div>-->
-<!--										<button>👎</button>-->
-<!--										<button>👍</button>-->
-<!--									</div>-->
-<!--								</td>-->
-<!--							</tr>-->
-
-<!--							<tr>-->
-<!--								<td>-->
-<!--									<div class="gover__withImage">-->
-<!--										<img src="img/kub.png" alt="">-->
-<!--										<span>UserName super duper</span>-->
-<!--									</div>-->
-<!--								</td>-->
-<!--								<td>-->
-<!--									<div class="gover__withImage">-->
-<!--										<img src="img/gerb.png" alt="">-->
-<!--										<span>Саксония-Анхальт</span>-->
-<!--									</div>-->
-<!--								</td>-->
-<!--								<td class="gover__voteMid">-->
-<!--									<div>-->
-<!--										<button>👎</button>-->
-<!--										<button>👍</button>-->
-<!--									</div>-->
-<!--								</td>-->
-<!--							</tr>-->
-<!--						</tbody>-->
-<!--					</table>-->
-<!--				</div>-->
-
-<!--				&lt;!&ndash;Министер блок статистики&ndash;&gt;-->
-<!--				<div class="gover__blockStatistic">-->
-<!--					<table class="gover__table">-->
-<!--						<tbody>-->
-<!--							<tr>-->
-<!--								<td>-->
-<!--									регион-->
-<!--								</td>-->
-<!--								<td style="text-align: center;">-->
-<!--									финансирование-->
-<!--								</td>-->
-<!--								<td></td>-->
-<!--							</tr>-->
-
-<!--							<tr>-->
-<!--								<td>-->
-<!--									<div class="gover__withImage">-->
-<!--										<img src="img/gerb.png" alt="">-->
-<!--										<span>Саксония-Анхальт</span>-->
-<!--									</div>-->
-<!--								</td>-->
-<!--								<td style="text-align: center;">-->
-<!--									100-->
-<!--								</td>-->
-<!--								&lt;!&ndash;видно на только пк&ndash;&gt;-->
-<!--								<td class="gover__tableDopInfo">-->
-<!--									<div class="gover__blockStatistic__dop">-->
-<!--										<div>-->
-<!--											<span>нефть:</span>-->
-<!--											<span>100</span>-->
-<!--										</div>-->
-<!--										<div>-->
-<!--											<span>уголь:</span>-->
-<!--											<span>0</span>-->
-<!--										</div>-->
-<!--										<div>-->
-<!--											<span>железо:</span>-->
-<!--											<span>10</span>-->
-<!--										</div>-->
-<!--										<div>-->
-<!--											<span>бокситы:</span>-->
-<!--											<span>0</span>-->
-<!--										</div>-->
-<!--									</div>-->
-<!--								</td>-->
-<!--								<td class="gover__tableInfoTd">-->
-<!--									<button class="gover__tableInfo" onclick="goverInfoModal.getInnerContent(this)">&#8505</button>-->
-<!--								</td>-->
-<!--							</tr>-->
-
-<!--							<tr>-->
-<!--								<td>-->
-<!--									<div class="gover__withImage">-->
-<!--										<img src="img/gerb.png" alt="">-->
-<!--										<span>Саксония-Анхальт</span>-->
-<!--									</div>-->
-<!--								</td>-->
-<!--								<td style="text-align: center;">-->
-<!--									100-->
-<!--								</td>-->
-<!--								&lt;!&ndash;видно на только пк&ndash;&gt;-->
-<!--								<td class="gover__tableDopInfo">-->
-<!--									<div class="gover__blockStatistic__dop">-->
-<!--										<div>-->
-<!--											<span>нефть:</span>-->
-<!--											<span>0</span>-->
-<!--										</div>-->
-<!--										<div>-->
-<!--											<span>уголь:</span>-->
-<!--											<span>100</span>-->
-<!--										</div>-->
-<!--										<div>-->
-<!--											<span>железо:</span>-->
-<!--											<span>0</span>-->
-<!--										</div>-->
-<!--										<div>-->
-<!--											<span>бокситы:</span>-->
-<!--											<span>99</span>-->
-<!--										</div>-->
-<!--									</div>-->
-<!--								</td>-->
-<!--								<td class="gover__tableInfoTd">-->
-<!--									<button class="gover__tableInfo" onclick="goverInfoModal.getInnerContent(this)">&#8505</button>-->
-<!--								</td>-->
-<!--							</tr>-->
-
-<!--							<tr>-->
-<!--								<td>-->
-<!--									<div class="gover__withImage">-->
-<!--										<img src="img/gerb.png" alt="">-->
-<!--										<span>Саксония-Анхальт</span>-->
-<!--									</div>-->
-<!--								</td>-->
-<!--								<td style="text-align: center;">-->
-<!--									100-->
-<!--								</td>-->
-<!--								&lt;!&ndash;видно на только пк&ndash;&gt;-->
-<!--								<td class="gover__tableDopInfo">-->
-<!--									<div class="gover__blockStatistic__dop">-->
-<!--										<div>-->
-<!--											<span>нефть:</span>-->
-<!--											<span>10</span>-->
-<!--										</div>-->
-<!--										<div>-->
-<!--											<span>уголь:</span>-->
-<!--											<span>3000</span>-->
-<!--										</div>-->
-<!--										<div>-->
-<!--											<span>железо:</span>-->
-<!--											<span>19</span>-->
-<!--										</div>-->
-<!--										<div>-->
-<!--											<span>бокситы:</span>-->
-<!--											<span>0</span>-->
-<!--										</div>-->
-<!--									</div>-->
-<!--								</td>-->
-<!--								<td class="gover__tableInfoTd">-->
-<!--									<button class="gover__tableInfo" onclick="goverInfoModal.getInnerContent(this)">&#8505</button>-->
-<!--								</td>-->
-<!--							</tr>-->
-<!--						</tbody>-->
-<!--					</table>-->
-<!--				</div>-->
-			</div>
+						<!--министр-->
+						{% custom_rights player parliament.state %}
 					{% endif %}
 				{% endif %}
 			<!--история-->
